--- a/.github/workflows/test-and-build.yaml
+++ b/.github/workflows/test-and-build.yaml
@@ -11,7 +11,9 @@ jobs:
         run: npm ci
 
       - name: run lint test
-        run: npm run lint
+        run: |
+          npm init @eslint/config
+          npm run lint
 
       - name: run test
         run: npm run test
