--- a/.github/workflows/test-and-build.yaml
+++ b/.github/workflows/test-and-build.yaml
@@ -10,10 +10,10 @@ jobs:
       - name: install all dependenicies
         run: npm ci
 
-      - name: run lint test
-        run: |
-          npm init @eslint/config
-          npm run lint
+      # - name: run lint test
+      #   run: |
+      #     npm init @eslint/config
+      #     npm run lint
 
       - name: run test
         run: npm run test
