--- a/.github/workflows/test-and-build.yaml
+++ b/.github/workflows/test-and-build.yaml
@@ -1,5 +1,9 @@
 name: test and build 
-on: [ workflow_dispatch, push ]
+on:
+  pull_request:
+    types:
+      - opened
+  workflow_dispatch:
 jobs:
   lint-test:
     runs-on: ubuntu-latest
