--- a/.github/workflows/test-and-build.yaml
+++ b/.github/workflows/test-and-build.yaml
@@ -27,6 +27,12 @@ jobs:
       - name: show content
         run: ls -larth
 
+      - name: upload build artifect
+        uses: actions/upload-artifact@v4
+        with:
+          name: test
+          path: dist
+
       
 
       
