--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -28,7 +28,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubuntu latest
+    runs-on: ubuntu-latest
     steps:
       - name: list content before downloading
         run: ls -larth
