--- a/.github/workflows/environment-vars.yaml
+++ b/.github/workflows/environment-vars.yaml
@@ -1,7 +1,7 @@
 name: test github env variables
 on: workflow_dispatch
 env:
-	PIPELINE: 'test'
+	TEST: OK
 jobs:
 	first:
 		runs-on: ubuntu-latest
