--- a/.github/workflows/conditional-workflow.yaml
+++ b/.github/workflows/conditional-workflow.yaml
@@ -8,7 +8,7 @@ jobs:
         run: echo "First Step!"
 
       - name: second step
-        run: echo "Second Step!"
+        run: echofequifg "Second Step!"
 
       - name: third step
         run: echo "Third Step!"
