--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -2,7 +2,11 @@ name: Matrix Strategy
 on: workflow_dispatch
 jobs:
   first:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-versions: [12, 14, 16]
+        os-type: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os-type }}
     steps:
       - name: checkout 
         uses: actions/checkout@v4
@@ -10,12 +14,10 @@ jobs:
       - name: setup node.js envionment
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: ${{ matrix.node-versions }}
 
       - name: install dependencies
         run: npm ci
 
       - name: run test
         run: npm run test
-
-        
